--- a/injection_add.html
+++ b/injection_add.html
@@ -213,7 +213,7 @@
 
         <!-- Patient Search Form -->
         <div class="input-group">
-            <input type="text" id="searchPatientId" placeholder="Enter Patient ID to search" required>
+            <input type="text" id="searchPatientId" placeholder="" required>
             <label>Search Patient by ID</label>
         </div>
         <button class="search-btn" id="searchPatientBtn">Search Patient</button>
